<resources>
    <string name="app_name">AC01 My favorite movies</string>
    <string name="favorite">Favorite</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="read_more">Read More</string>
    <string name="edit_user_rating">Edit User Rating</string>
    <string name="error">Error</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="overview">Overview:</string>
    <string name="my_score">My Score:</string>
    <string name="vote_count">Vote count:</string>
    <string name="vote_average">Vote average:</string>
    <string name="popularity">Popularity:</string>
    <string name="adult_content">Adult content:</string>
    <string name="release_date">Release date:</string>
    <string name="original_title">Original title:</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="edit_your_personal_rating_of_the_movie">Edit your personal rating of the movie</string>
    <string name="_0_10">0-10</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="order">Order</string>
    <string name="title_asc">Title ASC</string>
    <string name="title_desc">Title DESC</string>
    <string name="rating_asc">Rating ASC</string>
    <string name="rating_desc">Rating DESC</string>
    <string name="sort">Sort</string>
    <string name="submit">Submit</string>
    <string name="weather">Weather</string>
    <string name="Location">Weather</string>
</resources>
