<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/MIAddMovie"
            android:icon="@drawable/outline_add_circle_outline_24"
            android:title="@string/add"
            app:showAsAction="always" />

    <item
            android:id="@+id/MIWeather"
            android:icon="@drawable/baseline_wb_twilight_24"
            android:title="@string/weather"
            app:showAsAction="always" />

    <item
            android:id="@+id/MISort"
            android:title="@string/sort"
            app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                        android:id="@+id/MISortTitleAsc"
                        android:title="@string/title_asc" />
                <item
                        android:id="@+id/MISortTitleDesc"
                        android:title="@string/title_desc" />
                <item
                        android:id="@+id/MISortRatingAsc"
                        android:title="@string/rating_asc" />
                <item
                        android:id="@+id/MISortRatingDesc"
                        android:title="@string/rating_desc" />
            </group>
        </menu>
    </item>
</menu>
